<resources>
    <string name="app_name">NasaAPI</string>
    <string name="search_wiki">Поиск в wikipedia</string>
    <string name="settings">Настройки</string>
    <string name="favourite">Избранное</string>
    <string name="search">Поиск</string>
    <string name="back">Назад</string>
    <string name="Settings">Настройки</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Полностью черная тема</string>
    <string name="attachment_summary_on">Черный режим включен!
    </string>
    <string name="attachment_summary_off">Черный режим для Amoled экранов</string>
    <string name="Theme">Тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Themes -->
    <string name="standard">Стандартная</string>
    <string name="orange">Оранжевая</string>
    <string name="blue">Синяя</string>
  
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Animations">Анимации</string>
</resources>