<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Theme">

        <SwitchPreferenceCompat
            app:key="dark_theme"
            app:title="@string/dark_theme"
            />

        <ListPreference
            app:defaultValue="@string/standard"
            app:key="themes"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:title="Другие темы"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>